@@ -2699,7 +2699,7 @@ LRESULT CALLBACK VPSideBarWndProc(HWND hwnd, UINT uMsg, WPARAM wParam, LPARAM lP
 
 STDMETHODIMP VPinball::PlaySound(BSTR bstr)
 {
-   if (g_pplayer) g_pplayer->m_ptable->PlaySound(bstr, 0, 1);
+   if (g_pplayer) g_pplayer->m_ptable->PlaySound(bstr, 0, 1.f, 0.f);
 
    return S_OK;
 }
